--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
     "@types/node": "20.5.9",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "prettier": "^3.0.3",
