--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.4",
-    "@hookform/resolvers": "^3.3.4",
+    "@clerk/nextjs": "^4.31.3",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
@@ -29,20 +29,20 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "html-react-parser": "^5.1.1",
     "lucide-react": "^0.274.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.1.0",
-    "next": "^14.2.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.1",
+    "next": "^14.2.5",
     "postcss": "8.4.29",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
-    "svix": "^1.15.0",
+    "react-hook-form": "^7.52.1",
+    "svix": "^1.25.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
-    "zod": "^3.22.4"
+    "typescript": "^5.2.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
